testsuite/tests/grammar/invalid_unparser/pick-in-list.lkt
grammar foo_grammar {
    @main_rule main_rule <- list+("example" Root(or(
        ("example" Identifier(@identifier))
        | Number(@number)
    )))
}
